Fix area being too wide (there was horizontal scrollbar)

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -4,6 +4,8 @@
   width: 100%;
   top: 0px;
   bottom: 0px;
+  right: 0px;
+  left: 0px;
 }
 
 #app {
